--- a/web/rushcafe/templates/base.html
+++ b/web/rushcafe/templates/base.html
@@ -9,6 +9,27 @@
         <title>CafeCMS - {% block title %}{% endblock %}</title>
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom box-shadow">
+                <a class="navbar-brand" href="{% url 'index' %}">CafeCMS</a>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Menu
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{% url 'menu-categories' %}">Menu Categories</a>
+                            <a class="dropdown-item" href="{% url 'menu-items' %}">Menu Items</a>
+                        </div>
+                    </li>
+                </ul>
+                {% if user.is_authenticated %}
+                    <span class="mr-2">Hello, {{ user.get_username }}</span>
+                    <form action="{% url 'logout' %}">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button>
+                    </form>
+                {% endif %}
+            </nav>
+                
         <div class="container">
         {% block content %}
         {% endblock %}
