--- a/web/rushcafe/templates/login.html
+++ b/web/rushcafe/templates/login.html
@@ -8,7 +8,9 @@
 {% block content %}
 <div class="text-center">
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+<div class="alert alert-danger" role="alert">
+Your username and password didn't match. Please try again.
+</div>
 {% endif %}
 
 {% if next %}
