Loads current value into ModelChoiceField. Fixes a bug in the models with the foreign key not actually assigned to a name in the definition.

--- a/web/rushcafe/templates/rushcafe/category_new.html
+++ b/web/rushcafe/templates/rushcafe/category_new.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+{% load cssfilters %}
+
 <form action="{% url 'menu-category-add' %}" method="post">
     {% csrf_token %}
     {{ form }}
