--- a/web/rushcafe/templates/login.html
+++ b/web/rushcafe/templates/login.html
@@ -6,7 +6,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="text-center">
+<div class="mt-5 text-center">
 {% if form.errors %}
 <div class="alert alert-danger" role="alert">
 Your username and password didn't match. Please try again.
@@ -22,9 +22,9 @@ Your username and password didn't match. Please try again.
     {% endif %}
 {% endif %}
 {% load cssfilters %}
+<div class="text-center">
 <form class="form-signin" method="post" action="{% url 'login' %}">
 {% csrf_token %}
-<div class="form-group  ">
 <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 
     <span class="sr-only">{{ form.username.label_tag }}</span>
@@ -37,7 +37,6 @@ Your username and password didn't match. Please try again.
 
 <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
 <input type="hidden" name="next" value="{{ next }}" />
-</div>
 </form>
 </div>
 
