--- a/web/rushcafe/templates/rushcafe/item_new.html
+++ b/web/rushcafe/templates/rushcafe/item_new.html
@@ -1,12 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
 {% load cssfilters %}
-
+<h2 class="display-5 mt-5">Add Menu Item</h1>
+    <p class="lead mb-5">Add a new item to your menu below.</p>
+    
 <form action="{% url 'menu-item-add' %}" method="post">
     {% csrf_token %}
-    {{ form.name|addclass:'form-control' }}
-    {{ form.category|addclass:'form-control' }}
-    {{ form.price|addclass:'form-control'}}
-<button type="submit">Create</button>
+    <div class="form-group">
+        {{ form.name.label_tag}}
+        {{ form.name|addclass:'form-control' }}
+    </div>
+    <div class="form-group">
+        {{ form.category.label_tag }}
+        {{ form.category|addclass:'form-control' }}
+    </div>
+    <div class="form-group">
+        {{ form.price.label_tag }}
+        {{ form.price|addclass:'form-control'}}
+    </div>
+    <button class="btn btn-lg btn-primary" type="submit">Create</button>
+    <input type="hidden" name="next" value="{{ next }}" />
 </form>
 {% endblock %}
