--- a/web/rushcafe/templates/rushcafe/items.html
+++ b/web/rushcafe/templates/rushcafe/items.html
@@ -3,18 +3,57 @@
 
 {% block content %}
 {% if form %}
-<form action="{% url 'menu-item-add' %}" method="post">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Submit" />
-</form>
+{% load cssfilters %}
+<p class="mt-5">
+        <a class="btn btn-primary" data-toggle="collapse" href="#collapseForm" role="button" aria-expanded="false" aria-controls="collapseForm">
+            New Item
+        </a>
+    </p>
+    <div class="collapse" id="collapseForm">
+        <div class="card card-body">
+            <form action="{% url 'menu-item-add' %}" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    {{ form.name.label_tag}}
+                    {{ form.name|addclass:'form-control' }}
+                </div>
+                <div class="form-group">
+                    {{ form.category.label_tag }}
+                    {{ form.category|addclass:'form-control' }}
+                </div>
+                <div class="form-group">
+                    {{ form.price.label_tag }}
+                    {{ form.price|addclass:'form-control'}}
+                </div>
+                <button class="btn btn-primary" type="submit">Add Item</button>
+                <input type="hidden" name="next" value="{{ next }}" />
+            </form>
+    </div>
+</div>
+<table class="table table-striped">
+{% else %}
+<table class="mt-5 table table-striped">
 {% endif %}
-    
+
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Category</th>
+        </tr>
+    </thead>
+    <tbody>    
 {% for item in menu_items_list %}
-{{ item.name }}<br />
-{{ item.category }}<br />
-{{ item.price }}<br />
+        <tr>
+            <th scope="row">{{ item.id }}</th>
+            <td>{{ item.name }}</td>
+            <td>{{ item.price }}</td>
+            <td>{{ item.category }}<a class="float-right btn btn-outline-info ml-auto" href="{% url 'menu-item' item.id %}">Edit</a></td>
+        </tr>
 {% endfor %}
+    </tbody>
+</table>
 
 <div class="pagination">
 <span class="step-links">
