--- a/web/cafesite/templates/frontend.html
+++ b/web/cafesite/templates/frontend.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/chat.css' %}">
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/reconnecting-websocket.min.js' %}"></script>
     <script src="{% static 'js/chat.js' %}"></script>
 </head>
 <body>
